<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lepestok_margin_bottom2"
        android:layout_marginLeft="@dimen/lepestok_margin_left2"
        android:layout_marginRight="@dimen/lepestok_margin_right2"
        android:layout_marginTop="@dimen/lepestok_margin_top2" >

        <ImageView
            android:id="@+id/imageBig"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/imageView_description"
            android:scaleType="fitXY"
            android:src="@drawable/lepestok_orange2" />

        <LinearLayout
            android:id="@+id/laMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/la_menu_margin2"
            android:paddingRight="@dimen/la_menu_margin2" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_margin2"
                android:layout_weight="1"
                android:background="@drawable/button_menu_title"
                android:gravity="left|center_vertical"
                android:onClick="onNewsClick"
                android:paddingLeft="@dimen/menu_button_padding_text2"
                android:text="@string/news"
                android:textColor="#6c4400"
                android:textSize="@dimen/menu_button_text_size2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_margin2"
                android:layout_weight="1"
                android:background="@drawable/button_menu_title"
                android:gravity="left|center_vertical"
                android:onClick="onBonusClick"
                android:paddingLeft="@dimen/menu_button_padding_text2"
                android:text="@string/your_bonuses"
                android:textColor="#6c4400"
                android:textSize="@dimen/menu_button_text_size2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_margin2"
                android:layout_weight="1"
                android:background="@drawable/button_menu_title"
                android:gravity="left|center_vertical"
                android:onClick="onRulesClick"
                android:paddingLeft="@dimen/menu_button_padding_text2"
                android:text="@string/rules_button"
                android:textColor="#6c4400"
                android:textSize="@dimen/menu_button_text_size2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_margin2"
                android:layout_weight="1"
                android:background="@drawable/button_menu_title"
                android:gravity="left|center_vertical"
                android:onClick="onInfoClick"
                android:paddingLeft="@dimen/menu_button_padding_text2"
                android:text="@string/about"
                android:textColor="#6c4400"
                android:textSize="@dimen/menu_button_text_size2"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="@dimen/button_top_left_width2"
        android:layout_height="@dimen/button_top_left_height2"
        android:layout_alignBottom="@+id/relativeLayout1"
        android:layout_toLeftOf="@+id/buttonSettings"
        android:background="@null"
        android:contentDescription="@string/imageView_description"
        android:onClick="BackOnClick"
        android:scaleType="fitCenter"
        android:src="@drawable/button_rules_back2"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/buttonSettings"
        android:layout_width="@dimen/button_top_right_width2"
        android:layout_height="@dimen/button_top_right_height2"
        android:layout_alignBottom="@+id/relativeLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/button_top_right_margin2"
        android:background="@null"
        android:contentDescription="@string/imageView_description"
        android:onClick="SettingsOnClick"
        android:scaleType="fitCenter"
        android:src="@drawable/button_settings2" />

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="@dimen/button_bottom_left_width2"
        android:layout_height="@dimen/button_bottom_left_height2"
        android:layout_below="@+id/buttonSettings"
        android:layout_toLeftOf="@+id/buttonAccount"
        android:background="@null"
        android:contentDescription="@string/imageView_description"
        android:onClick="AddSearchOnClick"
        android:scaleType="fitCenter"
        android:src="@drawable/button_add_search2" />

    <ImageButton
        android:id="@+id/buttonAccount"
        android:layout_width="@dimen/button_bottom_right_width2"
        android:layout_height="@dimen/button_bottom_right_height2"
        android:layout_below="@+id/buttonBack"
        android:layout_toRightOf="@+id/buttonBack"
        android:background="@null"
        android:contentDescription="@string/imageView_description"
        android:onClick="AccountOncClick"
        android:scaleType="fitStart"
        android:src="@drawable/account_menu_button2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/logo_all_width2"
        android:layout_height="@dimen/logo_all_height2"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_marginRight="@dimen/logo_all_margin_right2"
        android:contentDescription="@string/imageView_description"
        android:src="@drawable/logo_all2" />

    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/banner_height2"
        android:layout_alignBottom="@+id/buttonSearch"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_marginBottom="@dimen/banner_margin_bottom2"
        android:layout_marginRight="@dimen/banner_margin_right2"
        android:gravity="left" >

    </RelativeLayout>

</RelativeLayout>